update openapi to use sortby

--- a/api-spec/extensions/sort/sort.fragment.yaml
+++ b/api-spec/extensions/sort/sort.fragment.yaml
@@ -3,16 +3,16 @@ paths:
   /stac/search:
     get:
       parameters:
-        - $ref: '#/components/parameters/sort'
+        - $ref: '#/components/parameters/sortby'
 components:
   parameters:
-    sort:
-      name: sort
+    sortby:
+      name: sortby
       in: query
       description: Allows sorting results by the specified properties
       required: false
       schema:
-        $ref: '#/components/schemas/sort'
+        $ref: '#/components/schemas/sortby'
   schemas:
     searchBody:
       allOf:
@@ -21,9 +21,9 @@ components:
       type: object
       description: Sort the results
       properties:
-        sort:
-          $ref: '#/components/schemas/sort'
-    sort:
+        sortby:
+          $ref: '#/components/schemas/sortby'
+    sortby:
       type: array
       description: |
         An array of objects containing a property name and sort direction.
@@ -43,6 +43,6 @@ components:
               - desc
 
       example:
-        - field: eo:cloud_cover
+        - field: properties.eo:cloud_cover
         - field: providers
           direction: desc
