update wrt required direction

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -346,7 +346,7 @@ paths:
         - $ref: '#/components/parameters/ids'
         - $ref: '#/components/parameters/collectionsArray'
         - $ref: '#/components/parameters/query'
-        - $ref: '#/components/parameters/sort'
+        - $ref: '#/components/parameters/sortby'
         - $ref: '#/components/parameters/fields'
       responses:
         '200':
@@ -589,13 +589,13 @@ components:
       required: false
       schema:
         type: string
-    sort:
-      name: sort
+    sortby:
+      name: sortby
       in: query
       description: Allows sorting results by the specified properties
       required: false
       schema:
-        $ref: '#/components/schemas/sort'
+        $ref: '#/components/schemas/sortby'
     fields:
       name: fields
       in: query
@@ -1889,9 +1889,9 @@ components:
       type: object
       description: Sort the results
       properties:
-        sort:
-          $ref: '#/components/schemas/sort'
-    sort:
+        sortby:
+          $ref: '#/components/schemas/sortby'
+    sortby:
       type: array
       description: |
         An array of objects containing a property name and sort direction.
@@ -1900,6 +1900,7 @@ components:
         type: object
         required:
           - field
+          - direction
         properties:
           field:
             type: string
@@ -1910,8 +1911,9 @@ components:
               - asc
               - desc
       example:
-        - field: 'eo:cloud_cover'
-        - field: providers
+        - field: 'properties.eo:cloud_cover'
+          direction: asc
+        - field: id
           direction: desc
     fieldsFilter:
       type: object
