update openapi definition wrt non-json format for get parameter

--- a/api-spec/extensions/sort/sort.fragment.yaml
+++ b/api-spec/extensions/sort/sort.fragment.yaml
@@ -12,7 +12,12 @@ components:
       description: Allows sorting results by the specified properties
       required: false
       schema:
-        $ref: '#/components/schemas/sortby'
+        type: integer
+        minimum: 1
+        maximum: 10000
+        default: 10
+      style: form
+      explode: false
   schemas:
     searchBody:
       allOf:
