--- a/api-spec/extensions/sort/sort.fragment.yaml
+++ b/api-spec/extensions/sort/sort.fragment.yaml
@@ -12,10 +12,7 @@ components:
       description: Allows sorting results by the specified properties
       required: false
       schema:
-        type: integer
-        minimum: 1
-        maximum: 10000
-        default: 10
+        type: string
       style: form
       explode: false
   schemas:
