--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -571,10 +571,7 @@ components:
       description: Allows sorting results by the specified properties
       required: false
       schema:
-        type: integer
-        minimum: 1
-        maximum: 10000
-        default: 10
+        type: string
       style: form
       explode: false
     fields:
