update the name of this field to be rel

--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -1533,7 +1533,7 @@ components:
             type: string
             description: Media type of the asset
             example: image/png
-          purpose:
+          rel:
             type: string
             description: Purpose of the asset
             example: thumbnail
