Add example validation script.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
           name: install
           command: |
             pip install stac-validator
+            pip install git+https://github.com/azavea/pystac.git@rde/feature/identify-version
       - run:
           name: validate
           command: |
@@ -25,3 +26,4 @@ jobs:
             stac_validator item-spec/examples/landsat8-sample.json
             stac_validator item-spec/examples/digitalglobe-sample.json
             stac_validator item-spec/examples/CBERS_4_MUX_20181029_177_106_L4.json
+            python .circleci/validate_examples.py
