--- a/api-spec/extensions/fields/fields.fragment.yaml
+++ b/api-spec/extensions/fields/fields.fragment.yaml
@@ -11,7 +11,8 @@ components:
       description: Determines the shape of the features in the response
       required: false
       schema:
-        $ref: '#/components/schemas/fields'
+        type: string
+        example: 'id,type,-geometry,bbox,properties,-links,-assets'
       style: form
       explode: false
   schemas:
@@ -48,4 +49,3 @@ components:
         exclude:
           - geometry
           - properties.datetime
-
