--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -1494,7 +1494,8 @@ components:
             items:
               type: string
             description: Purposes of the asset
-            example: thumbnail
+            example:
+              - thumbnail
     itemProperties:
       type: object
       required:
