--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -768,7 +768,8 @@ components:
             items:
               type: string
             description: Purposes of the asset
-            example: thumbnail
+            example:
+              - thumbnail
     itemProperties:
       type: object
       required:
