update changelog and run yaml merge

--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -270,6 +270,16 @@ components:
         determine
 
         the extent or all relevant geometries.
+
+
+        Example: The bounding box of the New Zealand Exclusive Economic Zone in
+        WGS 84
+
+        (from 160.6°E to 170°W and from 55.95°S to 25.89°S) would be represented
+        in JSON
+
+        as [ 160.6, -55.95, -170, -25.89 ] and in a query as
+        bbox=160.6,-55.95,-170,-25.89.
       required: false
       schema:
         type: array
