--- a/api-spec/package.json
+++ b/api-spec/package.json
@@ -7,9 +7,12 @@
   "scripts": {
     "generate-ext": "yaml-files extensions/STAC-extensions.merge.yaml STAC-extensions.yaml",
     "generate-core": "yaml-files openapi/STAC.merge.yaml STAC.yaml",
-    "generate-all": "npm run generate-core && npm run generate-ext"
+    "generate-all": "npm run generate-core && npm run generate-ext",
+    "serve-ext": "npm run generate-all && redoc-cli serve STAC-extensions.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true",
+    "serve": "npm run generate-all && redoc-cli serve STAC.yaml --watch --options.expandResponses \"200,201,202,203,204\" --options.pathInMiddlePanel true"
   },
   "dependencies": {
+    "redoc-cli": "^0.9.4",
     "yaml-files": "^1.1.0"
   }
 }
