--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -1880,11 +1880,12 @@ components:
         $ref: '#/components/schemas/queryProp'
       example:
         'eo:cloud_cover':
+          gt: 8
           lt: 50
-        providers:
-          eq: Planet
-        published:
-          gt: '2018-02-12T00:00:00Z'
+        platform:
+          eq: landsat-8
+        datetime:
+          gte: '2018-02-12T00:00:00Z'
           lte: '2018-03-18T12:31:12Z'
         'pl:item_type':
           startsWith: PSScene
@@ -1893,6 +1894,10 @@ components:
             - foo
             - bar
             - baz
+        'eo:gsd':
+          in:
+            - 10
+            - 20
     queryProp:
       description: Apply query operations to a specific property
       anyOf:
@@ -1906,50 +1911,74 @@ components:
               description: >-
                 Find items with a property that is equal to the specified value.
                 For strings, a case-insensitive comparison must be performed.
+              oneOf:
+                - type: string
+                - type: number
+                - type: boolean
             neq:
               description: >-
                 Find items that *don't* contain the specified value. For
                 strings, a case-insensitive comparison must be performed.
+              oneOf:
+                - type: string
+                - type: number
+                - type: boolean
             gt:
-              type: number
               description: >-
                 Find items with a property value greater than the specified
                 value.
+              oneOf:
+                - type: string
+                  format: date-time
+                - type: number
             lt:
-              type: number
               description: Find items with a property value less than the specified value.
+              oneOf:
+                - type: string
+                  format: date-time
+                - type: number
             gte:
-              type: number
               description: >-
                 Find items with a property value greater than or equal the
                 specified value.
+              oneOf:
+                - type: string
+                  format: date-time
+                - type: number
             lte:
-              type: number
               description: >-
-                Find items with a property value greater than or equal the
+                Find items with a property value less than or equal the
                 specified value.
+              oneOf:
+                - type: string
+                  format: date-time
+                - type: number
             startsWith:
-              type: string
               description: >-
                 Find items with a property that begins with the specified
                 string. A case-insensitive comparison must be performed.
-            endsWith:
               type: string
+            endsWith:
               description: >-
                 Find items with a property that ends with the specified string.
                 A case-insensitive comparison must be performed.
-            contains:
               type: string
+            contains:
               description: >-
-                Find items with a property that contains with the specified
-                string. A case-insensitive comparison must be performed.
+                Find items with a property that contains the specified literal
+                string, e.g., matches ".*<STRING>.*". A case-insensitive
+                comparison must be performed.
+              type: string
             in:
+              description: >-
+                Find items with a property that equals at least one entry in the
+                specified array. A case-insensitive comparison must be
+                performed.
               type: array
               items:
-                type: string
-              description: >-
-                Find items with a property that matches one of the specified
-                strings. A case-insensitive comparison must be performed.
+                oneOf:
+                  - type: string
+                  - type: number
     sortFilter:
       type: object
       description: Sort the results
