--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -1911,6 +1911,7 @@ components:
               description: >-
                 Find items with a property that is equal to the specified value.
                 For strings, a case-insensitive comparison must be performed.
+              nullable: true
               oneOf:
                 - type: string
                 - type: number
@@ -1919,6 +1920,7 @@ components:
               description: >-
                 Find items that *don't* contain the specified value. For
                 strings, a case-insensitive comparison must be performed.
+              nullable: true
               oneOf:
                 - type: string
                 - type: number
