--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,23 @@ jobs:
   build:
     working_directory: ~/stac
     docker:
-      - image: danvk/yarn-python36:0.0.1
+      - image: circleci/python:3.6.9
 
     steps:
       - checkout
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - run:
           name: install
           command: |
-            python3.6 -m venv venv
-            . venv/bin/activate
             pip install stac-validator
-            npm install remark-cli remark-validate-links
+            sudo apt-get install curl software-properties-common
+            curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            sudo npm install -g remark-cli remark-validate-links
       - run:
           name: validate
           command: |
-            . venv/bin/activate
             stac_validator catalog-spec/examples/catalog.json
             stac_validator collection-spec/examples/sentinel2.json
             stac_validator item-spec/examples/sample.json
