update versions for 0.9.0-rc1 release

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: The SpatioTemporal Asset Catalog API + Extensions
-  version: 0.8.1
+  version: 0.9.0-rc1
   license:
     name: Apache License 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0'
@@ -787,7 +787,7 @@ components:
                       - type: string
                       - type: number
       example:
-        stac_version: 0.8.1
+        stac_version: 0.9.0-rc1
         stac_extensions: []
         id: Sentinel-2
         title: 'Sentinel-2 MSI: MultiSpectral Instrument, Level-1C'
@@ -1646,7 +1646,7 @@ components:
     stac_version:
       title: STAC version
       type: string
-      example: 0.8.1
+      example: 0.9.0-rc1
     stac_extensions:
       title: STAC extensions
       type: array
@@ -1732,7 +1732,7 @@ components:
         assets:
           $ref: '#/components/schemas/itemAssets'
       example:
-        stac_version: 0.8.1
+        stac_version: 0.9.0-rc1
         stac_extensions:
           - eo
           - 'https://example.com/cs-extension/1.0/schema.json'
@@ -2116,7 +2116,7 @@ components:
                 rel: search
                 type: application/json
                 title: Search across feature collections
-            stac_version: 0.8.1
+            stac_version: 0.9.0-rc1
             id: naip
         text/html:
           schema:
