updated sort extention to use +/- symbols for GET requests

--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -637,10 +637,13 @@ components:
       required: false
       schema:
         type: string
+        example: '+id,-properties.eo:cloud_cover'
     sortby:
       name: sortby
       in: query
-      description: Allows sorting results by the specified properties
+      description: |
+        An array of property names, prefixed by either "+" for ascending or "-" for descending. If no prefix is
+        provided, "+" is assumed.
       required: false
       schema:
         type: string
