--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -637,16 +637,18 @@ components:
       required: false
       schema:
         type: string
-        example: '+id,-properties.eo:cloud_cover'
     sortby:
       name: sortby
       in: query
-      description: |
-        An array of property names, prefixed by either "+" for ascending or "-" for descending. If no prefix is
+      description: >
+        An array of property names, prefixed by either "+" for ascending or "-"
+        for descending. If no prefix is
+
         provided, "+" is assumed.
       required: false
       schema:
         type: string
+        example: '+id,-properties.eo:cloud_cover'
       style: form
       explode: false
     fields:
