--- a/api-spec/extensions/sort/sort.fragment.yaml
+++ b/api-spec/extensions/sort/sort.fragment.yaml
@@ -9,9 +9,9 @@ components:
     sortby:
       name: sortby
       in: query
-      description: |
-        An array of property names, prefixed by either "+" for ascending or "-" for descending. If no prefix is
-        provided, "+" is assumed.
+      description: |-
+        An array of property names, prefixed by either "+" for ascending or
+        "-" for descending. If no prefix is provided, "+" is assumed.
       required: false
       schema:
         type: string
