--- a/api-spec/openapi/STAC.yaml
+++ b/api-spec/openapi/STAC.yaml
@@ -34,12 +34,12 @@ paths:
   /search:
     get:
       summary: Search STAC items with simple filtering.
-      description: >-
+      description: |-
         Retrieve Items matching filters. Intended as a shorthand API for simple
         queries.
         
-
-        This method is optional, but you MUST implement `POST /search` if you want to implement this method.
+        This method is optional, but you MUST implement `POST /search` if you
+        want to implement this method.
       operationId: getSearchSTAC
       tags:
         - STAC
@@ -72,12 +72,14 @@ paths:
                 type: string
     post:
       summary: Search STAC items with full-featured filtering.
-      description: >-
+      description: |-
         retrieve items matching filters. Intended as the standard, full-featured
         query API.
         
-        
-        This method is mandatory to implement if `GET /search` is implemented. If this endpoint is implemented on a server, it is required to add a link with `rel` set to `search` to the `links` array in `GET /` that refers to this endpoint.
+        This method is mandatory to implement if `GET /search` is implemented.
+        If this endpoint is implemented on a server, it is required to add a
+        link with `rel` set to `search` to the `links` array in `GET /` that
+        refers to this endpoint.
       operationId: postSearchSTAC
       tags:
         - STAC
@@ -111,9 +113,9 @@ components:
     ids:
       name: ids
       in: query
-      description: |
-        Array of Item ids to return. All other filter parameters that further restrict the number of 
-        search results are ignored
+      description: |-
+        Array of Item ids to return. All other filter parameters that further
+        restrict the number of search results are ignored
       required: false
       schema:
         $ref: '#/components/schemas/ids'
@@ -134,8 +136,9 @@ components:
       in: query
       description: |-
         Only features that have a geometry that intersects the bounding box are selected.
-        The bounding box is provided as four or six numbers, depending on whether the
-        coordinate reference system includes a vertical axis (height or depth):
+        The bounding box is provided as four or six numbers, depending on
+        whether the coordinate reference system includes a vertical axis (height
+        or depth):
 
         * Lower left corner, coordinate axis 1
         * Lower left corner, coordinate axis 2
@@ -144,25 +147,28 @@ components:
         * Upper right corner, coordinate axis 2
         * Maximum value, coordinate axis 3 (optional)
 
-        The coordinate reference system of the values is WGS 84 longitude/latitude
-        (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different coordinate
-        reference system is specified in the parameter `bbox-crs`.
+        The coordinate reference system of the values is WGS 84
+        longitude/latitude (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless
+        a different coordinate reference system is specified in the parameter
+        `bbox-crs`.
 
-        For WGS 84 longitude/latitude the values are in most cases the sequence of
-        minimum longitude, minimum latitude, maximum longitude and maximum latitude.
-        However, in cases where the box spans the antimeridian the first value
-        (west-most box edge) is larger than the third value (east-most box edge).
+        For WGS 84 longitude/latitude the values are in most cases the sequence
+        of minimum longitude, minimum latitude, maximum longitude and maximum
+        latitude. However, in cases where the box spans the antimeridian the
+        first value (west-most box edge) is larger than the third value
+        (east-most box edge).
 
         If the vertical axis is included, the third and the sixth number are
         the bottom and the top of the 3-dimensional bounding box.
 
-        If a feature has multiple spatial geometry properties, it is the decision of the
-        server whether only a single spatial geometry property is used to determine
-        the extent or all relevant geometries.
+        If a feature has multiple spatial geometry properties, it is the
+        decision of the server whether only a single spatial geometry property
+        is used to determine the extent or all relevant geometries.
 
-        Example: The bounding box of the New Zealand Exclusive Economic Zone in WGS 84
-        (from 160.6°E to 170°W and from 55.95°S to 25.89°S) would be represented in JSON
-        as `[160.6, -55.95, -170, -25.89]` and in a query as `bbox=160.6,-55.95,-170,-25.89`.
+        Example: The bounding box of the New Zealand Exclusive Economic Zone in
+        WGS 84 (from 160.6°E to 170°W and from 55.95°S to 25.89°S) would be
+        represented in JSON as `[160.6, -55.95, -170, -25.89]` and in a query as
+        `bbox=160.6,-55.95,-170,-25.89`.
       required: false
       schema:
         type: array
@@ -183,8 +189,8 @@ components:
         Collections (path `/collections`, link relation
         `data`).
 
-        A link to the search endpoint (path `/search`, link relation
-        `search`) is **required** to be specified if the API implements `/search`
+        A link to the search endpoint (path `/search`, link relation `search`)
+        is **required** to be specified if the API implements `/search`.
       content:
         application/json:
           example:
@@ -206,9 +212,9 @@ components:
   schemas:
     description:
       type: string
-      description: >-
-        Detailed multi-line description to fully explain the catalog or collection.
-
+      description: |-
+        Detailed multi-line description to fully explain the catalog or
+        collection.
 
         [CommonMark 0.29](http://commonmark.org/) syntax MAY be used for rich
         text representation.
@@ -237,8 +243,18 @@ components:
         providers:
           $ref: '#/components/schemas/providers'
         summaries:
-          description: >-
-            Summaries are either a unique set of all available values *or* statistics. Statistics by default only specify the range (minimum and maximum values), but can optionally be accompanied by additional statistical values. The range can specify the potential range of values, but it is recommended to be as precise as possible. The set of values must contain at least one element and it is strongly recommended to list all values. It is recommended to list as many properties as reasonable so that consumers get a full overview of the Collection. Properties that are covered by the Collection specification (e.g. `providers` and `license`) may not be repeated in the summaries.
+          description: |-
+            Summaries are either a unique set of all available values *or*
+            statistics. Statistics by default only specify the range (minimum
+            and maximum values), but can optionally be accompanied by additional
+            statistical values. The range can specify the potential range of
+            values, but it is recommended to be as precise as possible. The set
+            of values must contain at least one element and it is strongly
+            recommended to list all values. It is recommended to list as many
+            properties as reasonable so that consumers get a full overview of
+            the Collection. Properties that are covered by the Collection
+            specification (e.g. `providers` and `license`) may not be repeated
+            in the summaries.
           type: object
           additionalProperties:
             oneOf:
@@ -248,8 +264,14 @@ components:
                   description: A value of any type.
               - type: object
                 title: Statistics
-                description: >-
-                  By default, only ranges with a minimum and a maximum value can be specified. Ranges can be specified for ordinal values only, which means they need to have a rank order. Therefore, ranges can only be specified for numbers and some special types of strings. Examples: grades (A to F), dates or times. Implementors are free to add other derived statistical values to the object, for example `mean` or `stddev`.
+                description: |-
+                  By default, only ranges with a minimum and a maximum value can
+                  be specified. Ranges can be specified for ordinal values only,
+                  which means they need to have a rank order. Therefore, ranges
+                  can only be specified for numbers and some special types of
+                  strings. Examples: grades (A to F), dates or times.
+                  Implementors are free to add other derived statistical values
+                  to the object, for example `mean` or `stddev`.
                 required:
                   - min
                   - max
@@ -411,19 +433,28 @@ components:
         merge:
           type: boolean
           default: false
-          description: >-
+          description: |-
             This is only valid when the server is responding to POST request.
 
-            If merge is true, the client is expected to merge the body value into the current request body before following the link.
-            This avoids passing large post bodies back and forth when following links, particularly for navigating pages through the POST /search endpoint.
+            If merge is true, the client is expected to merge the body value
+            into the current request body before following the link.
+            This avoids passing large post bodies back and forth when following
+            links, particularly for navigating pages through the `POST /search`
+            endpoint.
 
-            NOTE: To support form encoding it is expected that a client be able to merge in the key value pairs specified as JSON
-            `{"next": "token"}` will become `&next=token`
+            NOTE: To support form encoding it is expected that a client be able
+            to merge in the key value pairs specified as JSON
+            `{"next": "token"}` will become `&next=token`.
     license:
       type: string
-      description: >-
-        License(s) of the data as a SPDX [License identifier](https://spdx.org/licenses/) or [expression](https://spdx.org/spdx-specification-21-web-version#h.jxpfx0ykyb60). Alternatively, use `proprietary` if the license is not on the SPDX license list or `various` if multiple licenses apply. In these two cases links to the license texts SHOULD be added, see the `license` link relation type.
-        
+      description: |-
+        License(s) of the data as a SPDX
+        [License identifier](https://spdx.org/licenses/) or
+        [expression](https://spdx.org/spdx-specification-21-web-version#h.jxpfx0ykyb60).
+         Alternatively, use
+        `proprietary` if the license is not on the SPDX license list or
+        `various` if multiple licenses apply. In these two cases links to the
+        license texts SHOULD be added, see the `license` link relation type.
         
         Non-SPDX licenses SHOULD add a link to the license text with the
         `license` relation in the links section. The license text MUST NOT be
@@ -457,26 +488,22 @@ components:
               CommonMark 0.29 syntax MAY be used for rich text representation.
             type: string
           roles:
-            description: >-
+            description: |-
               Roles of the provider.
-
 
               The provider's role(s) can be one or more of the following
               elements:
 
               * licensor: The organization that is licensing the dataset under
-              the license specified in the collection's license field.
-
+                the license specified in the collection's license field.
               * producer: The producer of the data is the provider that
-              initially captured and processed the source data, e.g. ESA for
-              Sentinel-2 data.
-
+                initially captured and processed the source data, e.g. ESA for
+                Sentinel-2 data.
               * processor: A processor is any provider who processed data to a
-              derived product.
-
+                derived product.
               * host: The host is the actual provider offering the data on their
-              storage. There should be no more than one host, specified as last
-              element of the list.
+                storage. There should be no more than one host, specified as last
+                element of the list.
             type: array
             items:
               type: string
@@ -541,9 +568,10 @@ components:
         decision of the server whether only a single spatial geometry property
         is used to determine the extent or all relevant geometries.
 
-        Example: The bounding box of the New Zealand Exclusive Economic Zone in WGS 84
-        (from 160.6°E to 170°W and from 55.95°S to 25.89°S) would be represented in JSON
-        as `[160.6, -55.95, -170, -25.89]` and in a query as `bbox=160.6,-55.95,-170,-25.89`.
+        Example: The bounding box of the New Zealand Exclusive Economic Zone in
+        WGS 84 (from 160.6°E to 170°W and from 55.95°S to 25.89°S) would be
+        represented in JSON as `[160.6, -55.95, -170, -25.89]` and in a query as
+        `bbox=160.6,-55.95,-170,-25.89`.
       type: array
       minItems: 4
       maxItems: 6
@@ -562,16 +590,16 @@ components:
           $ref: '#/components/schemas/bbox'
     collectionsArray:
       type: array
-      description: |
+      description: |-
         Array of Collection IDs to include in the search for items.
-        Only Items in one of the provided Collections will be searched
+        Only Items in one of the provided Collections will be searched.
       items:
         type: string
     ids:
       type: array
-      description: |
-        Array of Item ids to return. All other filter parameters that further restrict the number of 
-        search results are ignored
+      description: |-
+        Array of Item ids to return. All other filter parameters that further
+        restrict the number of search results are ignored
       items:
         type: string
     datetimeFilter:
@@ -608,8 +636,9 @@ components:
     datetime:
       type: string
       description: |-
-        Either a date-time or an interval, open or closed. Date and time expressions
-        adhere to RFC 3339. Open intervals are expressed using double-dots.
+        Either a date-time or an interval, open or closed. Date and time
+        expressions adhere to RFC 3339. Open intervals are expressed using
+        double-dots.
 
         Examples:
 
@@ -792,12 +821,11 @@ components:
             example: Thumbnail
           description:
             type: string
-            description: >-
+            description: |-
               Multi-line description to explain the asset.
-      
-      
-              [CommonMark 0.29](http://commonmark.org/) syntax MAY be used for rich
-              text representation.
+
+              [CommonMark 0.29](http://commonmark.org/) syntax MAY be used for
+              rich text representation.
             example: Small 256x256px PNG thumbnail for a preview.
           type:
             type: string
