--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -1104,28 +1104,17 @@ components:
         text representation.
     license:
       type: string
-      description: >-
+      description: |-
         License(s) of the data as a SPDX
-
-        [License identifier](https://spdx.org/licenses/) or
-
-        [expression](https://spdx.org/spdx-specification-21-web-version#h.jxpfx0ykyb60).
-         Alternatively, use
+        [License identifier](https://spdx.org/licenses/). Alternatively, use
         `proprietary` if the license is not on the SPDX license list or
-
         `various` if multiple licenses apply. In these two cases links to the
-
         license texts SHOULD be added, see the `license` link relation type.
 
-
         Non-SPDX licenses SHOULD add a link to the license text with the
-
         `license` relation in the links section. The license text MUST NOT be
-
         provided as a value of this field. If there is no public license URL
-
         available, it is RECOMMENDED to host the license text and
-
         link to it.
       example: Apache-2.0
     providers:
