--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -1381,6 +1381,7 @@ components:
         stac_version: 0.9.0-rc1
         stac_extensions:
           - eo
+          - view
           - 'https://example.com/cs-extension/1.0/schema.json'
         type: Feature
         id: CS3-20160503_132131_05
