--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: The SpatioTemporal Asset Catalog API
-  version: 0.9.0-rc2
+  version: 0.9.0
   license:
     name: Apache License 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0'
@@ -490,7 +490,7 @@ components:
                       - type: string
                       - type: number
       example:
-        stac_version: 0.9.0-rc2
+        stac_version: 0.9.0
         stac_extensions: []
         id: Sentinel-2
         title: 'Sentinel-2 MSI: MultiSpectral Instrument, Level-1C'
@@ -1311,7 +1311,7 @@ components:
     stac_version:
       title: STAC version
       type: string
-      example: 0.9.0-rc2
+      example: 0.9.0
     stac_extensions:
       title: STAC extensions
       type: array
@@ -1378,7 +1378,7 @@ components:
         assets:
           $ref: '#/components/schemas/itemAssets'
       example:
-        stac_version: 0.9.0-rc2
+        stac_version: 0.9.0
         stac_extensions:
           - eo
           - view
@@ -1554,7 +1554,7 @@ components:
                 rel: search
                 type: application/json
                 title: Search across feature collections
-            stac_version: 0.9.0-rc2
+            stac_version: 0.9.0
             id: naip
         text/html:
           schema:
