--- a/api-spec/package.json
+++ b/api-spec/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-spec",
-  "version": "0.9.0-rc2",
+  "version": "0.9.0",
   "description": "Generate STAC openapi defintions from fragments.",
   "repository": "https://github.com/radiantearth/stac-spec",
   "license": "Apache-2.0",
