prepare for switching to git branch main vs. dev/master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,4 +63,4 @@ workflows:
             tags:
               only: /^v.*/
             branches:
-              ignore: /^((?!dev).)*$/
+              only: main
